src/graduate_work/inventory/grafana-ingress-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"grafana","app.kubernetes.io/part-of":"ingress-nginx"},"name":"grafana","namespace":"ingress-nginx"},"spec":{"ports":[{"port":3000,"protocol":"TCP","targetPort":3000}],"selector":{"app.kubernetes.io/name":"grafana","app.kubernetes.io/part-of":"ingress-nginx"},"type":"NodePort"}}
  creationTimestamp: "2024-03-13T14:36:29Z"
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: ingress-nginx
  name: grafana
  namespace: ingress-nginx
  resourceVersion: "287521"
  uid: f0b1fdbd-5afc-4c64-8ea1-efb9aabc14b6
spec:
  clusterIP: 10.233.36.144
  clusterIPs:
  - 10.233.36.144
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31333
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: ingress-nginx
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
