src/graduate_work/inventory/manifest_app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: default
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  app
  template:
    metadata:
      labels:
        app:  app
    spec:
      containers:
      - name: web-spring-boot
        image: ledok/jm_my_web4_spring_boot:0.0.1
        ports:
          - containerPort: 8080
      - name: postgres
        image: postgres:13.3
        ports:
          - containerPort: 5432
      volumes:
        - name: configmap
          configMap:
            name: configmap


---

apiVersion: v1
kind: Service
metadata:
  name: app-db-svc
  namespace: default
spec:
  selector:
    app: app
  ports:
    - name: web1
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: web2
      port: 5432
      targetPort: 5432
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: app-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30037
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
 name: grafana-nodeport
 namespace: default
spec:
 selector:
  app.kubernetes.io/instance: my-prometheus-stack
  app.kubernetes.io/name: grafana
 type: NodePort
 ports:
 - name: http
   port: 3000
   targetPort: 3000
   nodePort: 30036
   protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
 name: prometheus-nodeport
 namespace: default
spec:
 selector:
  app.kubernetes.io/name: prometheus
  operator.prometheus.io/name: my-prometheus-stack-kube-p-prometheus
 type: NodePort
 ports:
 - name: http-web
   port: 9090
   targetPort: 9090
   nodePort: 30035
   protocol: TCP
