src/graduate_work/inventory/network-policy-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-grafana
  namespace: monitoring
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: ingress-nginx
